--- a/PalladiumDwh.ClientApp/database.config
+++ b/PalladiumDwh.ClientApp/database.config
@@ -1,26 +1,26 @@
 <connectionStrings>
   <add
     name="DWAPIRemote"
-    connectionString="Data Source=.\koske14;Initial Catalog=DWAPIRemote;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True"
-    providerName="System.Data.SqlClient" 
-    />
-   
+    connectionString="Data Source=.\SQLExpress;Initial Catalog=DWAPIRemote;Persist Security Info=True;User ID=sa;Password=c0nstella;MultipleActiveResultSets=True;Pooling=True"
+    providerName="System.Data.SqlClient"
+  />
+
   <add
     name="EMRDatabase"
-    connectionString="Data Source=.\koske14;Initial Catalog=IQTools_Test;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True"
+    connectionString="Data Source=.\SQLExpress;Initial Catalog=IQTools;Persist Security Info=True;User ID=sa;Password=c0nstella;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient"
-    />
-  
+  />
+
   <add
     name="MySQLEMRDatabase"
     connectionString="Server=127.0.0.1;Port=3306;Database=hmis;Uid=root;Pwd=;convert zero datetime=True"
     providerName="MySql.Data.MySqlClient"
-    />
-  
+  />
+
   <add
     name="PostgreSQLEMRDatabase"
     connectionString="Server=127.0.0.1;Port=5432;Database=hmis;User Id=postgres;Password=postgres;"
     providerName="Npgsql"
-    /> 
+  />
 
 </connectionStrings>
