--- a/PalladiumDwh.ClientReader.Infrastructure.Tests/PalladiumDwh.ClientReader.Infrastructure.Tests.csproj
+++ b/PalladiumDwh.ClientReader.Infrastructure.Tests/PalladiumDwh.ClientReader.Infrastructure.Tests.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Data\Command\SyncPatientVisitExtractCommandTests.cs" />
     <Compile Include="Data\Command\SyncPatientExtractCommandTests.cs" />
     <Compile Include="Data\DatabaseManagerTests.cs" />
+    <Compile Include="Data\Repository\EventHistoryRepositoryTests.cs" />
     <Compile Include="Data\Repository\TempPatientExtractErrorSummaryRepositoryTests.cs" />
     <Compile Include="Data\Repository\TempExtractRepositoryTests.cs" />
     <Compile Include="Data\Repository\ClientExtractRepositoryTests.cs" />
