--- a/PalladiumDwh.ClientReader.Infrastructure.Tests/PalladiumDwh.ClientReader.Infrastructure.Tests.csproj
+++ b/PalladiumDwh.ClientReader.Infrastructure.Tests/PalladiumDwh.ClientReader.Infrastructure.Tests.csproj
@@ -103,6 +103,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Csv\Command\AnalyzeCsvTempExtractsCommandTests.cs" />
+    <Compile Include="Csv\Command\ClearCsvExtractsCommandTests.cs" />
     <Compile Include="Csv\Command\LoadPatientBaselinesExtractCsvCommandTests.cs" />
     <Compile Include="Csv\Command\LoadPatientLaboratoryExtractCsvCommandTests.cs" />
     <Compile Include="Csv\Command\LoadPatientPharmacyExtractCsvCommandTests.cs" />
