refactred syncommand to add import stats

--- a/PalladiumDwh.ClientReader.Infrastructure/PalladiumDwh.ClientReader.Infrastructure.csproj
+++ b/PalladiumDwh.ClientReader.Infrastructure/PalladiumDwh.ClientReader.Infrastructure.csproj
@@ -176,6 +176,10 @@
     <Compile Include="Migrations\201706140730444_EventHistoryRev002.Designer.cs">
       <DependentUpon>201706140730444_EventHistoryRev002.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706150610170_EventHistoryRev003.cs" />
+    <Compile Include="Migrations\201706150610170_EventHistoryRev003.Designer.cs">
+      <DependentUpon>201706150610170_EventHistoryRev003.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\LiveSeeder.cs" />
     <Compile Include="Migrations\MySqlHistoryContext.cs" />
@@ -220,6 +224,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706140730444_EventHistoryRev002.resx">
       <DependentUpon>201706140730444_EventHistoryRev002.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706150610170_EventHistoryRev003.resx">
+      <DependentUpon>201706150610170_EventHistoryRev003.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Scripts.resx">
       <Generator>ResXFileCodeGenerator</Generator>
