--- a/PalladiumDwh.ClientUploader.Infrastructure/packages.config
+++ b/PalladiumDwh.ClientUploader.Infrastructure/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Dapper" version="1.50.2" targetFramework="net462" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net462" />
+  <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net462" />
 </packages>
