--- a/PalladiumDwh.ClientReader.Infrastructure/PalladiumDwh.ClientReader.Infrastructure.csproj
+++ b/PalladiumDwh.ClientReader.Infrastructure/PalladiumDwh.ClientReader.Infrastructure.csproj
@@ -180,6 +180,10 @@
     <Compile Include="Migrations\201706150610170_EventHistoryRev003.Designer.cs">
       <DependentUpon>201706150610170_EventHistoryRev003.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706162138186_InitialLiveApp000.cs" />
+    <Compile Include="Migrations\201706162138186_InitialLiveApp000.Designer.cs">
+      <DependentUpon>201706162138186_InitialLiveApp000.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\LiveSeeder.cs" />
     <Compile Include="Migrations\MySqlHistoryContext.cs" />
@@ -227,6 +231,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706150610170_EventHistoryRev003.resx">
       <DependentUpon>201706150610170_EventHistoryRev003.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706162138186_InitialLiveApp000.resx">
+      <DependentUpon>201706162138186_InitialLiveApp000.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Scripts.resx">
       <Generator>ResXFileCodeGenerator</Generator>
