--- a/PalladiumDwh.ClientApp/database.config
+++ b/PalladiumDwh.ClientApp/database.config
@@ -7,7 +7,7 @@
 
   <add
     name="EMRDatabase"
-    connectionString="Data Source=.\koske14;Initial Catalog=IQTools_WRP;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True"
+    connectionString="Data Source=.\koske14;Initial Catalog=IQToolsWRP;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient"
   />
 
