--- a/PalladiumDwh.Shared/packages.config
+++ b/PalladiumDwh.Shared/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CsvHelper" version="2.16.3.0" targetFramework="net462" />
+  <package id="Dapper" version="1.50.4" targetFramework="net462" />
+  <package id="Dapper.Contrib" version="1.50.4" targetFramework="net462" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net462" />
 </packages>
