refactored to use batch processing of data

--- a/PalladiumDwh.Infrastructure.Tests/PalladiumDwh.Infrastructure.Tests.csproj
+++ b/PalladiumDwh.Infrastructure.Tests/PalladiumDwh.Infrastructure.Tests.csproj
@@ -80,6 +80,11 @@
   <ItemGroup>
     <Compile Include="FacilityDapperRepositoryTests.cs" />
     <Compile Include="FacilityRepositoryTests.cs" />
+    <Compile Include="PatientLaboratoryRepositoryTests.cs" />
+    <Compile Include="PatientPharmacyRepositoryTests.cs" />
+    <Compile Include="PatientBaseLinesRepositoryTests.cs" />
+    <Compile Include="PatientStatusRepositoryTests.cs" />
+    <Compile Include="PatientArtRepositoryTests.cs" />
     <Compile Include="PatientVisitRepositoryTests.cs" />
     <Compile Include="PatientDapperExtractRepositoryTests.cs" />
     <Compile Include="PatientExtractRepositoryTests.cs" />
