--- a/PalladiumDwh.DwapiService/App.config
+++ b/PalladiumDwh.DwapiService/App.config
@@ -22,6 +22,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  
   <applicationSettings>
     <PalladiumDWh.DwapiService.Properties.Settings>
       <setting name="QueueName" serializeAs="String">
@@ -31,7 +32,13 @@
         <value>200</value>
       </setting>
       <setting name="QueuePoll" serializeAs="String">
-        <value>30</value>
+        <value>300</value>
+      </setting>
+      <setting name="Z_Dapper_Plus_LicenseName" serializeAs="String">
+        <value>1755;701-ThePalladium</value>
+      </setting>
+      <setting name="Z_Dapper_Plus_LicenseKey" serializeAs="String">
+        <value>9005d618-3965-8877-97a5-7a27cbb21c8fGKE</value>
       </setting>
     </PalladiumDWh.DwapiService.Properties.Settings>
   </applicationSettings>
