--- a/PalladiumDwh.DwapiService/Properties/Settings.settings
+++ b/PalladiumDwh.DwapiService/Properties/Settings.settings
@@ -6,10 +6,16 @@
       <Value Profile="(Default)">.\private$\dwapi.emr</Value>
     </Setting>
     <Setting Name="QueueBatch" Type="System.Int32" Scope="Application">
-      <Value Profile="(Default)">100</Value>
+      <Value Profile="(Default)">200</Value>
     </Setting>
     <Setting Name="QueuePoll" Type="System.Int32" Scope="Application">
-      <Value Profile="(Default)">60</Value>
+      <Value Profile="(Default)">30</Value>
+    </Setting>
+    <Setting Name="Z_Dapper_Plus_LicenseName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">1755;701-ThePalladiumGroup</Value>
+    </Setting>
+    <Setting Name="Z_Dapper_Plus_LicenseKey" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">9005d618-3965-8877-97a5-7a27cbb21c8f</Value>
     </Setting>
   </Settings>
 </SettingsFile>
