--- a/PalladiumDwh.DwapiService/App.config
+++ b/PalladiumDwh.DwapiService/App.config
@@ -35,10 +35,10 @@
         <value>300</value>
       </setting>
       <setting name="Z_Dapper_Plus_LicenseName" serializeAs="String">
-        <value>1755;701-ThePalladium</value>
+        <value>1755;701-ThePalladiumGroup</value>
       </setting>
       <setting name="Z_Dapper_Plus_LicenseKey" serializeAs="String">
-        <value>9005d618-3965-8877-97a5-7a27cbb21c8fGKE</value>
+        <value>9005d618-3965-8877-97a5-7a27cbb21c8f</value>
       </setting>
     </PalladiumDWh.DwapiService.Properties.Settings>
   </applicationSettings>
