--- a/PalladiumDwh.Infrastructure.Tests/database.config
+++ b/PalladiumDwh.Infrastructure.Tests/database.config
@@ -1,7 +1,7 @@
 <connectionStrings>
   <add
     name="DWAPICentral"
-    connectionString="Data Source=FUTURESKE2\SQLSERVER;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=c0nstella;MultipleActiveResultSets=True;Pooling=True"
+    connectionString="Data Source=192.168.1.12\SQLSERVER;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=c0nstella;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient" 
     />
 </connectionStrings>
