remove fac massage

--- a/PalladiumDwh.DWapi/Web.config
+++ b/PalladiumDwh.DWapi/Web.config
@@ -28,7 +28,7 @@
   -->
   <system.web>
     <compilation debug="true" targetFramework="4.6.2" />
-    <httpRuntime targetFramework="4.6" />
+    <httpRuntime targetFramework="4.6" maxRequestLength="524288000"/>
   </system.web>
   <system.webServer>
     <handlers>
@@ -37,6 +37,11 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="524288000" /> <!--500MB-->
+      </requestFiltering>
+    </security>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
