--- a/PalladiumDwh.Infrastructure.Tests/PalladiumDwh.Infrastructure.Tests.csproj
+++ b/PalladiumDwh.Infrastructure.Tests/PalladiumDwh.Infrastructure.Tests.csproj
@@ -69,6 +69,9 @@
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="Z.Dapper.Plus, Version=1.3.25.0, Culture=neutral, PublicKeyToken=59b66d028979105b, processorArchitecture=MSIL">
+      <HintPath>..\packages\Z.Dapper.Plus.1.3.25\lib\net45\Z.Dapper.Plus.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
