--- a/PalladiumDwh.Infrastructure.Tests/packages.config
+++ b/PalladiumDwh.Infrastructure.Tests/packages.config
@@ -7,4 +7,5 @@
   <package id="NMemory" version="1.1.2" targetFramework="net462" />
   <package id="NUnit" version="3.9.0" targetFramework="net462" />
   <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net462" />
+  <package id="Z.Dapper.Plus" version="1.3.25" targetFramework="net462" />
 </packages>
