--- a/PalladiumDwh.Core.Tests/packages.config
+++ b/PalladiumDwh.Core.Tests/packages.config
@@ -5,6 +5,7 @@
   <package id="Effort.EF6" version="1.3.0" targetFramework="net462" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
   <package id="NBuilder" version="5.0.0" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="NMemory" version="1.1.2" targetFramework="net462" />
   <package id="NUnit" version="3.9.0" targetFramework="net462" />
   <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net462" />
