fixed connection problem and added seed exclution

--- a/PalladiumDwh.ClientApp/App.config
+++ b/PalladiumDwh.ClientApp/App.config
@@ -28,6 +28,9 @@
       <setting name="dwapiUrl" serializeAs="String">
         <value>http://data.kenyahmis.org:81/dwapi/api</value>
       </setting>
+      <setting name="seedSetting" serializeAs="String">
+        <value>True</value>
+      </setting>
     </PalladiumDwh.ClientApp.Properties.Settings>
   </applicationSettings>
 
