--- a/PalladiumDwh.DwapiService/database.config
+++ b/PalladiumDwh.DwapiService/database.config
@@ -1,7 +1,7 @@
 <connectionStrings>
   <add
     name="DWAPICentral"
-    connectionString="Data Source=Data Source=192.168.1.13;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=dwapi;Password=c0nstella;MultipleActiveResultSets=True;Pooling=True"
+    connectionString="Data Source=Data Source=.;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=dwapi;Password=c0nstella;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient" 
     />
 </connectionStrings>
