--- a/PalladiumDwh.DWapi/packages.config
+++ b/PalladiumDwh.DWapi/packages.config
@@ -26,6 +26,8 @@
   <package id="StructureMap.MVC5" version="3.1.1.134" targetFramework="net462" />
   <package id="structuremap.web" version="4.0.0.315" targetFramework="net462" />
   <package id="StructureMap.WebApi2" version="3.0.4.125" targetFramework="net462" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net462" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net462" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net462" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net462" />
   <package id="WebGrease" version="1.6.0" targetFramework="net462" />
