--- a/PalladiumDwh.Core/PalladiumDwh.Core.csproj
+++ b/PalladiumDwh.Core/PalladiumDwh.Core.csproj
@@ -49,9 +49,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exchange\DocketDto.cs" />
+    <Compile Include="Exchange\ManifestDto.cs" />
+    <Compile Include="Exchange\StatDto.cs" />
+    <Compile Include="Exchange\StatsDto.cs" />
+    <Compile Include="Interfaces\ILiveSyncService.cs" />
     <Compile Include="Interfaces\IMessagingReaderService.cs" />
     <Compile Include="Interfaces\IMessagingSenderService.cs" />
     <Compile Include="Interfaces\IMessagingService.cs" />
+    <Compile Include="Interfaces\Interface1.cs" />
     <Compile Include="Interfaces\IPatientAdverseEventRepository.cs" />
     <Compile Include="Interfaces\IProfileScheduler.cs" />
     <Compile Include="Interfaces\IPatientArtExtractRepository.cs" />
@@ -64,6 +70,7 @@
     <Compile Include="Interfaces\IPatientVisitRepository.cs" />
     <Compile Include="Interfaces\ISyncService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\LiveSyncService.cs" />
     <Compile Include="Services\MessagingReaderService.cs" />
     <Compile Include="Services\MessagingSenderService.cs" />
     <Compile Include="Services\MessagingService.cs" />
