--- a/PalladiumDwh.DwapiService/App.config
+++ b/PalladiumDwh.DwapiService/App.config
@@ -31,14 +31,17 @@
       <setting name="QueueBatch" serializeAs="String">
         <value>200</value>
       </setting>
-      <setting name="QueuePoll" serializeAs="String">
-        <value>300</value>
-      </setting>
       <setting name="Z_Dapper_Plus_LicenseName" serializeAs="String">
         <value>1755;701-ThePalladiumGroup</value>
       </setting>
       <setting name="Z_Dapper_Plus_LicenseKey" serializeAs="String">
         <value>9005d618-3965-8877-97a5-7a27cbb21c8f</value>
+      </setting>
+      <setting name="QueuePoll" serializeAs="String">
+        <value>300</value>
+      </setting>
+      <setting name="LiveSync" serializeAs="String">
+        <value>http://localhost:4777/stages/</value>
       </setting>
     </PalladiumDWh.DwapiService.Properties.Settings>
   </applicationSettings>
