--- a/PalladiumDwh.DWapi/database.config
+++ b/PalladiumDwh.DWapi/database.config
@@ -1,7 +1,7 @@
 <connectionStrings>
   <add
     name="DWAPICentral"
-    connectionString="Data Source=.;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=M@un1983;MultipleActiveResultSets=True;Pooling=True"
+    connectionString="Data Source=koske-mac;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=M@un1983;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient"
     />
 </connectionStrings>
