--- a/PalladiumDwh.DWapi/packages.config
+++ b/PalladiumDwh.DWapi/packages.config
@@ -15,6 +15,7 @@
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net462" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net462" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.2.2" targetFramework="net462" />
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net462" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
