--- a/PalladiumDwh.ClientApp/packages.config
+++ b/PalladiumDwh.ClientApp/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CSharpFunctionalExtensions" version="2.0.0" targetFramework="net462" />
   <package id="dbup" version="3.3.5" targetFramework="net462" />
   <package id="DocumentFormat.OpenXml" version="2.8.1" targetFramework="net462" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
