--- a/PalladiumDwh.ClientReader.Core/packages.config
+++ b/PalladiumDwh.ClientReader.Core/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CSharpFunctionalExtensions" version="2.0.0" targetFramework="net462" />
   <package id="CsvHelper" version="2.16.3.0" targetFramework="net462" />
   <package id="DocumentFormat.OpenXml" version="2.8.1" targetFramework="net462" />
   <package id="FastMember" version="1.1.0" targetFramework="net462" />
