--- a/PalladiumDwh.ClientReader.Infrastructure.Tests/PalladiumDwh.ClientReader.Infrastructure.Tests.csproj
+++ b/PalladiumDwh.ClientReader.Infrastructure.Tests/PalladiumDwh.ClientReader.Infrastructure.Tests.csproj
@@ -39,6 +39,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CSharpFunctionalExtensions, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CSharpFunctionalExtensions.2.0.0\lib\net461\CSharpFunctionalExtensions.dll</HintPath>
+    </Reference>
     <Reference Include="Effort, Version=1.0.0.0, Culture=neutral, PublicKeyToken=6a46696d54971e6d, processorArchitecture=MSIL">
       <HintPath>..\packages\Effort.EF6.1.3.0\lib\net45\Effort.dll</HintPath>
     </Reference>
