--- a/PalladiumDwh.ClientUploader.Core.Tests/packages.config
+++ b/PalladiumDwh.ClientUploader.Core.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CSharpFunctionalExtensions" version="2.0.0" targetFramework="net462" />
   <package id="Effort.EF6" version="1.3.0" targetFramework="net462" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net462" />
