--- a/PalladiumDwh.DWapi/packages.config
+++ b/PalladiumDwh.DWapi/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net462" />
   <package id="bootstrap" version="3.3.7" targetFramework="net462" />
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net462" />
+  <package id="CSharpFunctionalExtensions" version="2.0.0" targetFramework="net462" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
   <package id="jQuery" version="3.2.1" targetFramework="net462" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
