--- a/PalladiumDwh.DwapiService/packages.config
+++ b/PalladiumDwh.DwapiService/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Common.Logging" version="3.4.1" targetFramework="net462" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net462" />
+  <package id="CSharpFunctionalExtensions" version="2.0.0" targetFramework="net462" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net462" />
