--- a/PalladiumDwh.DWapi/Web.config
+++ b/PalladiumDwh.DWapi/Web.config
@@ -102,6 +102,9 @@
       <setting name="QueueName" serializeAs="String">
         <value>.\private$\dwapi.emr</value>
       </setting>
+      <setting name="LiveSync" serializeAs="String">
+        <value>http://localhost:4777/stages/</value>
+      </setting>
     </PalladiumDwh.DWapi.Properties.Settings>
   </applicationSettings>
   <system.codedom>
