--- a/PalladiumDwh.DWapi/Properties/Settings.settings
+++ b/PalladiumDwh.DWapi/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="QueueName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">.\private$\dwapi.emr</Value>
     </Setting>
+    <Setting Name="LiveSync" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">http://localhost:4777/stages/</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
