improvements to manifest processing

--- a/PalladiumDwh.Shared/PalladiumDwh.Shared.csproj
+++ b/PalladiumDwh.Shared/PalladiumDwh.Shared.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Model\DTO\FacilityId.cs" />
     <Compile Include="Model\DTO\PatientAdverseEventExtractDTO.cs" />
     <Compile Include="Model\DTO\PatientExtractId.cs" />
+    <Compile Include="Model\DTO\PatientFacilityId.cs" />
     <Compile Include="Model\Entity.cs" />
     <Compile Include="Model\DTO\FacilityDTO.cs" />
     <Compile Include="Model\DTO\PatientArtExtractDTO.cs" />
