--- a/PalladiumDwh.Shared.Tests/PalladiumDwh.Shared.Tests.csproj
+++ b/PalladiumDwh.Shared.Tests/PalladiumDwh.Shared.Tests.csproj
@@ -67,6 +67,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Model\ManifestTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StreamExtensionsTests.cs" />
     <Compile Include="UtilityTests.cs" />
